Mitigate broken applications cancelling CM requests when paused
Performs all passkey activities in windows marked as translucent to
prevent Android from suspending the underlying activities.

--- a/src/App/Platforms/Android/AndroidManifest.xml
+++ b/src/App/Platforms/Android/AndroidManifest.xml
@@ -39,6 +39,7 @@
 				<data android:mimeType="text/*" />
 			</intent-filter>
 		</activity>
+        <activity android:name="com.x8bit.bitwarden.PasskeyHandlerActivity" android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|uiMode" android:exported="false" android:icon="@mipmap/ic_launcher" android:label="Bitwarden" android:launchMode="@integer/launchModeAPIlevel" android:theme="@style/PasskeyHandlerTheme" />
 	</application>
 	<!-- Support for Xamarin.Essentials.Browser.OpenAsync  (for Android > 11) -->
 	<!-- Related docs: https://learn.microsoft.com/en-us/xamarin/essentials/open-browser?tabs=android -->
