--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -6,6 +6,9 @@
    <IncludeBitwardeniOSExtensions>True</IncludeBitwardeniOSExtensions>
    <IncludeBitwardenWatchOSApp>True</IncludeBitwardenWatchOSApp>
    <Argon2IdLoadMtouchExtraArgs>-gcc_flags "-L$(ProjectDir)../../lib/ios -largon2 -force_load $(ProjectDir)../../lib/ios/libargon2.a"</Argon2IdLoadMtouchExtraArgs>
+   <iOSBuildSupported>False</iOSBuildSupported>
+   <iOSBuildSupported Condition="$([MSBuild]::IsOSPlatform('windows'))">True</iOSBuildSupported>
+   <iOSBuildSupported Condition="$([MSBuild]::IsOSPlatform('osx'))">True</iOSBuildSupported>
    
    <!-- Uncomment this when Unit Testing-->
    <!-- <CustomConstants>UT</CustomConstants> -->
