--- a/src/iOS.Autofill/Entitlements.plist
+++ b/src/iOS.Autofill/Entitlements.plist
@@ -6,11 +6,11 @@
 	<true/>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.8bit.bitwarden</string>
+		<string>group.xyz.qtmlabs.internal.passwordmanager</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.8bit.bitwarden</string>
+		<string>$(AppIdentifierPrefix)xyz.qtmlabs.internal.passwordmanager</string>
 	</array>
 </dict>
 </plist>
