--- a/src/iOS.Autofill/Info.plist
+++ b/src/iOS.Autofill/Info.plist
@@ -9,7 +9,7 @@
 	<key>CFBundleName</key>
 	<string>Bitwarden Autofill</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.8bit.bitwarden.autofill</string>
+	<string>xyz.qtmlabs.internal.passwordmanager.autofill</string>
 	<key>CFBundleShortVersionString</key>
 	<string>2024.7.2</string>
 	<key>CFBundleVersion</key>
