--- a/src/iOS.ShareExtension/Entitlements.plist
+++ b/src/iOS.ShareExtension/Entitlements.plist
@@ -4,11 +4,11 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.com.8bit.bitwarden</string>
+		<string>group.xyz.qtmlabs.internal.passwordmanager</string>
 	</array>
 	<key>keychain-access-groups</key>
 	<array>
-		<string>$(AppIdentifierPrefix)com.8bit.bitwarden</string>
+		<string>$(AppIdentifierPrefix)xyz.qtmlabs.internal.passwordmanager</string>
 	</array>
 </dict>
 </plist>
