--- a/src/watchOS/bitwarden/bitwarden WatchKit Extension/Info.plist
+++ b/src/watchOS/bitwarden/bitwarden WatchKit Extension/Info.plist
@@ -7,7 +7,7 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>WKAppBundleIdentifier</key>
-			<string>com.8bit.bitwarden.watchkitapp</string>
+			<string>xyz.qtmlabs.internal.passwordmanager.watchkitapp</string>
 		</dict>
 		<key>NSExtensionPointIdentifier</key>
 		<string>com.apple.watchkit</string>
