--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -14,6 +14,6 @@
    <!-- <CustomConstants>UT</CustomConstants> -->
 
    <!-- Uncomment this when building FDROID-->
-   <!-- <CustomConstants>FDROID</CustomConstants> -->
+   <CustomConstants>FDROID</CustomConstants>
  </PropertyGroup>
 </Project>
